{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 22,
  "lineage": "772c1631-86cc-1903-74e3-f58de638d0a7",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.my_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d7fd1c2af6eead0",
            "arn": "arn:aws:ec2:us-east-1:975049964036:instance/i-04cc8b297964bf444",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-tf-test",
            "id": "i-04cc8b297964bf444",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytfkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a1342bbfdc52ce77",
            "private_dns": "ip-10-0-1-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-44-203-14-112.compute-1.amazonaws.com",
            "public_ip": "44.203.14.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065c9625c0695b3d9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006119a7758404204",
            "tags": {
              "Name": "my-test-1"
            },
            "tags_all": {
              "Name": "my-test-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fa4ca6d59dfac5b"
            ]
          },
          "dependencies": [
            "module.my_ec2.data.template_file.pkg_init",
            "module.my_vpc.aws_security_group.mynginx_sg",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mynginx_gw",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:internet-gateway/igw-025800741efbbbdce",
            "id": "igw-025800741efbbbdce",
            "owner_id": "975049964036",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mynginx_private",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:route-table/rtb-094e9d43d21769a4d",
            "id": "rtb-094e9d43d21769a4d",
            "owner_id": "975049964036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025800741efbbbdce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mynginx_public",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:route-table/rtb-02ae684388a87f3a7",
            "id": "rtb-02ae684388a87f3a7",
            "owner_id": "975049964036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025800741efbbbdce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013d4c5c075d779f4",
            "route_table_id": "rtb-094e9d43d21769a4d",
            "subnet_id": "subnet-003a3eab781b40d2d"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_private",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.private_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5107e61c16402f",
            "route_table_id": "rtb-094e9d43d21769a4d",
            "subnet_id": "subnet-0196c6b2a59aea86c"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_private",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.private_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd1a5595bad58a15",
            "route_table_id": "rtb-094e9d43d21769a4d",
            "subnet_id": "subnet-0ce732ee5fb451c65"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_private",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.private_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08be9d8e62d4bcd63",
            "route_table_id": "rtb-02ae684388a87f3a7",
            "subnet_id": "subnet-006119a7758404204"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5379dd9fce6c6c0",
            "route_table_id": "rtb-02ae684388a87f3a7",
            "subnet_id": "subnet-07f25072597b0c358"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0153a150f3d6ded2d",
            "route_table_id": "rtb-02ae684388a87f3a7",
            "subnet_id": "subnet-0f04311fa59c160d2"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.mynginx_gw",
            "module.my_vpc.aws_route_table.mynginx_public",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mynginx_sg",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:security-group/sg-04fa4ca6d59dfac5b",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-04fa4ca6d59dfac5b",
            "ingress": [],
            "name": "mynginx-sg",
            "name_prefix": "",
            "owner_id": "975049964036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_ssh_http"
            },
            "tags_all": {
              "Name": "Allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1593065773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04fa4ca6d59dfac5b",
            "security_group_rule_id": "sgr-08ec7375daaf16f42",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_security_group.mynginx_sg",
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1935553582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fa4ca6d59dfac5b",
            "security_group_rule_id": "sgr-02cc434576524e87a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_security_group.mynginx_sg",
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4281791760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04fa4ca6d59dfac5b",
            "security_group_rule_id": "sgr-0b5d6c2367b78cf56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_security_group.mynginx_sg",
            "module.my_vpc.aws_vpc.mynginx_main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-003a3eab781b40d2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a3eab781b40d2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet.1"
            },
            "tags_all": {
              "Name": "my_private_subnet.1"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-0196c6b2a59aea86c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0196c6b2a59aea86c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet.2"
            },
            "tags_all": {
              "Name": "my_private_subnet.2"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-0ce732ee5fb451c65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce732ee5fb451c65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet.3"
            },
            "tags_all": {
              "Name": "my_private_subnet.3"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-006119a7758404204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006119a7758404204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet.1"
            },
            "tags_all": {
              "Name": "my_public_subnet.1"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-07f25072597b0c358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f25072597b0c358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet.2"
            },
            "tags_all": {
              "Name": "my_public_subnet.2"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:subnet/subnet-0f04311fa59c160d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f04311fa59c160d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049964036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet.3"
            },
            "tags_all": {
              "Name": "my_public_subnet.3"
            },
            "vpc_id": "vpc-0d67bc4a8222412f0"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.mynginx_main",
            "module.my_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mynginx_main",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049964036:vpc/vpc-0d67bc4a8222412f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02216ed6bf006e6e2",
            "default_route_table_id": "rtb-06dbd4e0c11f79a51",
            "default_security_group_id": "sg-0f1af7881c05b42b0",
            "dhcp_options_id": "dopt-05be9b00bacdfd9bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d67bc4a8222412f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dbd4e0c11f79a51",
            "owner_id": "975049964036",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}